Complete Adding delete/edit bottons

--- a/contactusTable.html
+++ b/contactusTable.html
@@ -57,6 +57,8 @@
         <th>#</th> 
         <th>Email</th>
         <th>Message</th>
+        <th>Edit</th>
+        <th>Delete</th>
       </tr>
       </thead>
       <tbody>
@@ -64,6 +66,8 @@
           <td>1</td>
           <td>email@gmail.com</td>
           <td>Message</td>
+          <td><a href="contactusTable.html?id=1">Edit</a></td>
+          <td><a href="contactusTable.html?id=1">Delete</a></td>
         </tr>
       </tbody>
     </table>
