--- a/registration.html
+++ b/registration.html
@@ -77,8 +77,8 @@
       <label th>Address</label>
       <input type="text" id="" placeholder="Address">
       <label th>Gender</label>
-      Male<input type="radio" value="">
-      Female<input type="radio" value="">
+      <input type="radio" value="">Male
+      <input type="radio" value="">Female
       <label th>Subject</label>
       <input type="radio" value="">Subject 1
       <input type="radio" value="">Subject 2
