--- a/usersTable.html
+++ b/usersTable.html
@@ -62,6 +62,8 @@
         <th>Phone</th>
         <th>Subject</th>
         <th>Department</th>
+        <th>Edit</th>
+        <th>Delete</th>
       </tr>
       </thead>
       <tbody>
@@ -74,6 +76,8 @@
           <td>Phone</td>
           <td>Subject</td>
           <td>Department</td>
+          <td><a href="userstable.html?id=1">Edit</a></td>
+          <td><a href="userstable.html?id=1">Delete</a></td>
         </tr>
       </tbody>
     </table>
